tests/golden/type_errors/named_struct_wrong_field_type.err
Type error at 2:39: field `age` expects number, got string
  let p: Person = Person { name: "Ada", age: "old" };
                                        ^
